Fix overlapping for repo cardview

--- a/src/portal/src/app/base/project/repository/gridview/grid-view.component.scss
+++ b/src/portal/src/app/base/project/repository/gridview/grid-view.component.scss
@@ -1,6 +1,6 @@
 .grid-content {
   position: relative;
-  top: 36px;
+  top: 66px;
   left: 0;
   right: 0;
   bottom: 0;
