--- a/src/portal/src/app/base/project/repository/repository-gridview.component.scss
+++ b/src/portal/src/app/base/project/repository/repository-gridview.component.scss
@@ -42,7 +42,7 @@
 
 .rightPos{
     @include grid-right-top-pos;
-    top: 22px;
+    top: 18px;
 }
 
 .toolbar {
